--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "node-static": "^0.7.6",
-    "richtemplate": "^0.1.2"
+    "richtemplate": "^0.1.2",
+    "stonewalljs":"latest",
+    "richtemplate":"latest"
   },
   "dependencies": {
     "requirejs": "^2.1.15"
