--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "requirejs": "^2.1.15",
     "bootstrap": "latest",
-    "watch": "latest"
+    "watch": "latest",
+    "stonewall":"latest"
   },
   "ignore":[
     "src"
