--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
   },
   "private":true,
   "dependencies": {
-    "requirejs": "^2.1.15",
+    "requirejs": "latest",
     "bootstrap": "latest",
     "watch": "latest",
     "stonewall":"latest"
