--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "requirejs": "^2.1.15"
   },
   "scripts": {
-    "start": "node Server.js"
+    "start": "node Server.js",
+    "postinstall":"bower install && grunt && npm start"
   }
 }
