--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "node-static": "^0.7.6",
-    "stonewalljs":"0.2.4",
-    "richtemplate":"0.2.4"
+    "stonewalljs":"0.2.8",
+    "richtemplate":"0.2.7",
+    "less": "^2.1.1",
+    "clean-css": "^3.0.10"
   },
   "dependencies": {
     "requirejs": "^2.1.15"
