--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "node-static": "^0.7.6",
-    "stonewalljs": "0.2.12",
-    "richtemplate": "0.2.8",
-    "less": "^2.1.1",
+    "stonewalljs": "1.0.3",
+    "richtemplate": "1.0.5",
+    "less": "2.6.1",
     "clean-css": "^3.0.10",
-    "grunt-contrib-copy": "^0.8.0"
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-babel": "^6.0.0",
+    "babel-cli": "6.6.5",
+    "babel-polyfill": "6.3.14",
+    "babel-preset-es2015": "6.6.0",
+    "grunt-contrib-uglify": "^0.11.0"
   },
   "dependencies": {
-    "highlight": "^0.2.3",
-    "requirejs": "^2.1.15"
+    "highlight.js": "9.3.0",
+    "requirejs": "2.2.0"
   },
   "scripts": {
     "start": "node Server.js",
